// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home page matches error state snapshot 1`] = `
<DocumentFragment>
  <div>
    mocks error
  </div>
</DocumentFragment>
`;

exports[`Home page matches final state snapshot 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div>
      You're signed in as Douglas and you're cached go to the 
      <a
        href="/about"
      >
        about
      </a>
       page.
      <button>
        Test Button
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home page matches loading state snapshot 1`] = `
<DocumentFragment>
  <div>
    loading...
  </div>
</DocumentFragment>
`;
